# tr

./: .env.example  .gitignore  ARCHITECTURE_ANALYSIS_INDEX.md  BATCH_PROCESSING_IMPLEMENTATION.md  CHANGELOG.md  CLAUDE.md  DEBIAN8_VALIDATION_REPORT.md  DESIGN_PATTERNS_ANALYSIS.md  DESIGN_PATTERNS_QUICK_REFERENCE.md  DOCUMENTATION_CONSOLIDATION_PLAN.md  DOCUMENTATION_IMPLEMENTATION_SUMMARY.md  DOCUMENTATION_VALIDATION_REPORT.md  INSTALLATION.md  LICENSE  MANIFEST.in  MATCHING_IMPROVEMENTS.md  Makefile  PRESENTATION_CODE_SNIPPETS.md  PROJECT_SUMMARY.md  PROJECT_WALKTHROUGH.md  PUBLISHING.md  PYGITHUB_REMOVAL.md  README.md  TEST_ANALYSIS_REPORT.md  pyproject.toml  requirements-ai.txt  requirements.txt  scan-python-repo.sh  test_cli_aliases.sh  threat-radar.config.example.json
.claude/agents/: docs-updater.md  test-writer.md
.github/workflows/: release.yml  test.yml
cli/: app.py  cve.py
docker/: .dockerignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  quick-test.sh  requirements-ai-docker.txt  requirements-docker.txt  test-commands.sh
docs/: API.md  CLI_FEATURES.md  DEPLOYMENT.md  DOCUMENTATION_ORGANIZATION.md  INDEX.md  INSTALLATION.md  MITRE_ATTACK_INTEGRATION.md  PUBLISHING.md  REPORTING_GUIDE.md  SBOM_STORAGE_ORGANIZATION.md  SBOM_SYFT.md  TECH_STACK.md  index.html
docs/development/: CODE_REVIEW_REPORT.md  REFACTORING_SUMMARY.md  SESSION_SUMMARY.md
docs/docker/: DOCKER_INTERACTIVE.md  DOCKER_LOCAL_SCANNING.md  TESTING.md
docs/history/: CLEANUP_SUMMARY.md  LEGACY_CLEANUP_PLAN.md
docs/reports/: IMPROVEMENTS_SUMMARY.md
docs/requirements/: CICD-IMPLEMENTATION.md  CICD-REQUIREMENTS.md
docs/validation/: EXAMPLES_TEST_RESULTS.md  FALSE_POSITIVE_ANALYSIS.md
examples/: .gitignore  CLI_EXAMPLES.md  DIRECTORY_MAP.md  INDEX.md  README.md  SESSION_INDEX.md  START_HERE.md  TROUBLESHOOTING.md  alpine.json  debian.json  distroless.json  docker_cli_examples.sh  docker_usage.py  docker_vulnerability_scan.py  example_usage.py  hash_usage.py  nvd_basic_usage.py  ubuntu.json
examples/01_basic/: README.md  cve_database_usage.py  docker_usage.py
examples/02_advanced/: README.md  cve_matching_example.py  docker_advanced.py  python_sbom_example.py  syft_sbom_example.py
examples/03_vulnerability_scanning/: README.md  comprehensive_debian8_test.py  debug_debian_matching.py  demo_with_findings.py  docker_vulnerability_scan.py  quick_vulnerability_demo.py  scan_vulnerable_image.py  test_debian_jessie.py
examples/04_testing/: README.md  debug_matching.py  test_matching_accuracy.py
examples/05_reporting/: 01_basic_report_generation.py  02_ai_powered_reports.py  03_dashboard_integration.py  EXAMPLES_SUMMARY.md  README.md  requirements-dev.txt  requirements.txt
examples/06_graph_database/: 01_basic_graph_usage.py  02_advanced_graph_analysis.py  03_graph_workflows.py  README.md
examples/07_environment_configuration/: 01_basic_usage.py  02_advanced_configuration.py  03_real_world_workflows.py  README.md
examples/08_graph_visualization/: 01_visualization_examples.py  README.md
examples/09_ai_business_context/: 01_business_context_analysis.py  README.md
examples/10_attack_path_discovery/: 01_basic_attack_path.py  02_privilege_escalation.py  03_lateral_movement.py  04_complete_assessment.py  05_visualize_zones_and_paths.py  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  README.md  attack-paths.json  attack-surface.json  environment-graph.graphml  lateral-movement.json  privilege-escalation.json  run_attack_path_demo.sh  sample-environment.json
examples/11_graph_visualization/: 00_setup.py  01_basic_visualization.py  02_attack_path_visualization.py  02b_dynamic_attack_path_visualization.py  03_dynamic_3d_topology.py  03_topology_visualization.py  04_filtered_visualization.py  04_ultimate_visualizations.py  06_complete_workflow.py  3D_TOPOLOGY_GUIDE.md  ADVANCED_VISUALIZATIONS.md  COMMAND_CENTER_GUIDE.md  DYNAMIC_VISUALIZATIONS.md  README.md  sample_graph.graphml
examples/12_real_world_data/: .gitignore  QUICKSTART.md  README.md  SUMMARY.md  generate_real_world_data.py
examples/13_microservices_demo_analysis/: ATTACK_PATHS_3D_ENHANCEMENT.md  HOLOGRAPHIC_VIZ_FIX.md  QUICKSTART.md  VISUALIZATION_COMPARISON.md  VISUALIZATION_UPDATES.md  create_nervous_system_cluster.py  create_nervous_system_hierarchical.py  create_nervous_system_radial.py  create_nervous_system_spectral.py  debug-viz.sh  (+5 more)
sbom_storage/: .gitignore  ORGANIZATION.md  README.md
scripts/: cytoscape_viewer.html  setup_dev.py
tests/: NEW_TESTS_SUMMARY.md  __init__.py  test_ai_integration.py  test_attack_paths.py  test_batch_processing.py  test_cli_commands.py  test_cli_context.py  test_comprehensive_report.py  test_config_manager.py  test_docker_integration.py  test_environment_integration.py  test_github_api.py  test_github_integration.py  test_graph_analytics.py  test_graph_integration.py  test_grype_integration.py  test_hasher.py  test_nvd_integration.py  test_sbom_cve_integration.py  test_storage_managers.py  test_syft_integration.py  test_visualization.py
threat_radar/: __init__.py
(+171 files in other folders)
