[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "threat-radar"
version = "0.1.0"
description = "Threat Radar (tr) application and associated libraries"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "PyGithub==2.1.1",
    "python-dotenv==1.0.0",
    "typer>=0.9.0",
    "docker>=7.0.0",
    "anchore-syft>=1.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]

[project.scripts]
threat-radar = "threat_radar.cli.__main__:main"
tradar = "threat_radar.cli.__main__:main"

[project.urls]
Homepage = "https://github.com/yourusername/threat-radar"
Repository = "https://github.com/yourusername/threat-radar.git"
Issues = "https://github.com/yourusername/threat-radar/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["threat_radar*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]