[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "threat-radar"
version = "0.5.0"
description = "Enterprise-grade threat assessment and vulnerability analysis platform for Docker containers and software dependencies"
authors = [{name = "Threat Radar Team", email = "contact@threat-radar.dev"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
keywords = [
    "security",
    "vulnerability",
    "cve",
    "docker",
    "sbom",
    "scanning",
    "threat-analysis",
    "grype",
    "syft",
    "ai-security",
    "vulnerability-scanning",
    "container-security",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
    "Environment :: Console",
    "Typing :: Typed",
]
dependencies = [
    "python-dotenv==1.0.0",
    "typer>=0.9.0",
    "docker>=7.0.0",
    "anchore-syft>=1.18.0",
    "openai>=1.0.0",
    "tenacity>=8.2.0",
    "plotly",
    "kaleido",
    "networkx",
    "numpy"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]
ai = [
    "ollama>=0.1.0",
    "anthropic>=0.7.0",
]

[project.scripts]
threat-radar = "threat_radar.cli.__main__:main"
tradar = "threat_radar.cli.__main__:main"

[project.urls]
Homepage = "https://github.com/Threat-Radar/tr"
Documentation = "https://github.com/Threat-Radar/tr/blob/main/README.md"
Repository = "https://github.com/Threat-Radar/tr.git"
Issues = "https://github.com/Threat-Radar/tr/issues"
Changelog = "https://github.com/Threat-Radar/tr/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["threat_radar*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]